                   User-Visible Term::ANSIColor Changes

Term::ANSIColor 5.00 (unreleased)

    Drop support for Perl 5.6.  The minimum supported version is now Perl
    5.8.  Perl 5.6 isn't supported by Travis-CI and is only spottily
    tested, so true support is dubious.

    Allow color aliases to map to multiple attributes instead of only one
    attribute.  Based on work by Yanick Champoux.

    Aliases may now be defined in terms of other aliases.

    Document bad interactions between colored output to standard output
    and standard error when standard output is line-buffered in a couple
    of places in the manual and suggest setting autoflush() or EACHLINE
    as a fix.  (#121974)

    Document how to support CLICOLOR <https://bixense.com/clicolors/> in
    programs using Term::ANSIColor.  (Due to backward compatibility and
    non-output uses, there's no easy way to support CLICOLOR in the module
    automatically.)

    Update to rra-c-util 8.1:

    * Update perlcritic configuration.
    * Add SPDX-License-Identifier headers to all significant files.

Term::ANSIColor 4.06 (2016-10-28)

    Add aliases ansi16 through ansi255 and on_ansi16 through on_ansi255
    (plus the corresponding constants) for the grey and rgb colors so that
    one can refer to all of the 256 ANSI colors with consistent names.
    These are aliases; the colors returned by uncolor will still use the
    grey and rgb names.  (#118267)

Term::ANSIColor 4.05 (2016-03-20)

    Color aliases are now restricted to ASCII alphanumerics, due to the
    below change.

    Delay loading of the Carp module and avoid using [:upper:], \w, and \d
    in regular expressions to reduce the amount of memory this module
    consumes.  (Normally, I wouldn't worry about this, but this module is
    very light-weight and can be useful even in highly space-constrained
    environments, and the impact is slight.)  Thanks, Nicolas R.
    (#111552)
