@@ -31,6 +31,7 @@ t/module/basic.t
 t/module/basic256.t
 t/module/eval.t
 t/module/stringify.t
+t/module/true-color.t
 t/style/coverage.t
 t/style/critic.t
 t/style/minimum-version.t
